rock-paper-scissors game

--- a/HTML/09-dom-projects.html
+++ b/HTML/09-dom-projects.html
@@ -23,6 +23,8 @@
     <p class="js-total-cost"></p>
 
     <script>
+      window.document;
+
       function handleCostKeyDown(event) {
         console.log(event.key);
         if (event.key === "Enter") {
